seo: basic seo for all pages

--- a/client/index.html
+++ b/client/index.html
@@ -4,7 +4,84 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/png" href="/rhousing-logo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+    <!-- Primary Meta Tags -->
     <title>RIGHT Housing Inc.: Where Every Door Leads to Opportunity</title>
+    <meta
+      name="title"
+      content="RIGHT Housing Inc.: Where Every Door Leads to Opportunity"
+    />
+    <meta
+      name="description"
+      content="Empowering individuals transitioning from incarceration or recovery through comprehensive housing support, job training, and holistic services. Join us in transforming lives."
+    />
+    <meta
+      name="keywords"
+      content="housing support, recovery housing, transitional housing, reintegration services, addiction recovery, job training, NGO, nonprofit organization, community support, housing assistance, recovery support, job training, RIGHT Housing, RIGHT Housing Inc, RIGHT,rehabilitation programs, community support, housing assistance, addiction recovery, reintegration services, supportive housing, housing solutions, recovery housing, sober living, mental health support, life skills training, employment assistance, financial literacy, case management, holistic support, community reintegration, housing nonprofit, social services, rehabilitation center, recovery community, crisis intervention, substance abuse recovery, affordable housing, emergency shelter, housing advocacy, supportive services"
+    />
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://righthousing.org/" />
+    <meta
+      property="og:title"
+      content="RIGHT Housing Inc.: Where Every Door Leads to Opportunity"
+    />
+    <meta
+      property="og:description"
+      content="Empowering individuals transitioning from incarceration or recovery through comprehensive housing support, job training, and holistic services. Join us in transforming lives."
+    />
+    <meta property="og:image" content="/rhousing-logo.png" />
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image" />
+    <meta property="twitter:url" content="https://righthousing.org/" />
+    <meta
+      property="twitter:title"
+      content="RIGHT Housing Inc.: Where Every Door Leads to Opportunity"
+    />
+    <meta
+      property="twitter:description"
+      content="Empowering individuals transitioning from incarceration or recovery through comprehensive housing support, job training, and holistic services. Join us in transforming lives."
+    />
+    <meta property="twitter:image" content="/rhousing-logo.png" />
+
+    <!-- Additional Meta Tags -->
+    <meta name="robots" content="index, follow" />
+    <meta name="language" content="English" />
+    <meta name="author" content="RIGHT Housing Inc." />
+    <meta name="geo.region" content="US-NJ" />
+    <meta name="geo.placename" content="Camden" />
+    <link rel="canonical" href="https://righthousing.org/" />
+
+    <!-- Structured Data -->
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "NGO",
+        "name": "RIGHT Housing Inc.",
+        "slogan": "Where Every Door Leads to Opportunity",
+        "url": "https://righthousing.org",
+        "logo": "/rhousing-logo.png",
+        "description": "Empowering individuals transitioning from incarceration or recovery through comprehensive housing support, job training, and holistic services.",
+        "address": {
+          "@type": "PostalAddress",
+          "addressLocality": "Camden",
+          "addressRegion": "NJ",
+          "addressCountry": "US"
+        },
+        "sameAs": [
+          "https://facebook.com/righthousing",
+          "https://twitter.com/righthousing",
+          "https://linkedin.com/company/righthousing"
+        ],
+        "areaServed": {
+          "@type": "City",
+          "name": "Camden"
+        },
+        "nonprofitStatus": "Nonprofit501c3"
+      }
+    </script>
   </head>
   <body>
     <div id="root"></div>
